--- a/CSS/Index/Index.css
+++ b/CSS/Index/Index.css
@@ -12,4 +12,56 @@ h1 , h2{
 
 
 
+  
 
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  * { 
+    box-sizing: border-box; 
+} 
+
+.Column_1 {
+    float: left;
+    width: 50%; 
+    padding: 10px;
+    padding-top: 3%; 
+    height: 500px; 
+    background-color: rgb(72, 90, 69); 
+   
+}
+
+
+@media screen and (max-width: 576px) {
+    .Column_1 {
+        overflow: auto;
+    }
+}
+
+.Column_2 {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    padding-top: 1.9%;
+    height: 500px;
+    background-color: rgb(99, 114, 96);
+}
+
+ 
+.Column_tall {
+    padding-top: 3.5%;
+    height: 450px;
+}
+
+
+.Row:after {
+	content: ""; 
+	display: table; 
+	clear: both; 
+}
+/***** END OF TABLE STYLING *****/
+
+  
