--- a/CSS/Index/navigationmenue.css
+++ b/CSS/Index/navigationmenue.css
@@ -4,10 +4,15 @@
 
     background-color: #333;
     position: fixed;
-    top: 0;
+    top: 0px;
+    height: 50px;
     width: 100%;
+    z-index: 1;
     
 }
+
+
+
 
 
 /* links inside the navbar*/
