--- a/CSS/Index/shared.css
+++ b/CSS/Index/shared.css
@@ -78,10 +78,53 @@ span {
 
 }
 
-.footer {
-    
+footer {
+    padding: 2%; /* This gives the footer padding that is equal to 2% of the width of the element's area */
+    background-color: #808080;}
+
+
+    img {
+        filter: grayscale(75%); /* This rids our pictures of 75% of their color */
+        border-radius: 8px; /* Gives all images slightly rounded corners */
+        max-width: 100%; /* Ensures all images stay within the width of their container */
+        height: 340px; /* Sets the height of all images */
+        display: block; /* By specifying block display we can ensure our images are able to be centered */
+        margin-left: auto; /* In combination with "margin-right: auto" this centers all images */
+        margin-right: auto;
+    }
+
+    /* Paragraph elements */
+p {
+    font-family: fantasy Bold;
+    text-align: justify; /* Justify text within paragraph elements */
+    letter-spacing: 1px; /* This expands the text slightly */
+    font-size: 20px;
+    padding-left: 20px; /* Adds padding to the left of the paragraph element */
+    padding-right: 20px; /* Adds padding to the right of the paragraph element */
 }
 
+/* Paragraph element hover effect */
+p:hover {
+    transition: transform 1s; /* This makes the transform effect last 1 second */
+	transform: scale(1.01); /* This makes the paragraphs increase slightly in size when hovered over */
+}
+
+/* Center class - this applies to all elements with the class "center" */
+.center {
+    text-align: center; /* This center aligns the text */
+}
+
+/* Center class hover effect - This only affects the quote, github link, and footer */
+.center:hover {
+    transition: transform 2s; /* This makes the transform effect last 2 seconds */
+    transform: scale(1.1); /* This makes the elements with class "center" increase in size by 1.1 when hovered over */
+}
+
+img:hover {
+	filter: grayscale(5%);  /* Brings back most of the image's color when hovered over */
+    transition: transform 1s; /* Transition lasts 1 second */
+	transform: scale(1.1); /* Image is increased slightly when hovered over */
+}
 
 
 
