--- a/CSS/Index/shared.css
+++ b/CSS/Index/shared.css
@@ -80,7 +80,7 @@ span {
 
 footer {
     padding: 2%; /* This gives the footer padding that is equal to 2% of the width of the element's area */
-    background-color: background-color: rgb(72, 83, 72);;}
+    background-color: background-color; rgb(72, 83, 72);}
 
 
     img {
@@ -126,6 +126,34 @@ img:hover {
 	transform: scale(1.1); /* Image is increased slightly when hovered over */
 }
 
+/*Hopefully this will be for my footer social media link*/
+.fa {
+  padding: 5px;
+  font-size: 25px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+  }
+  .fa-youtube {
+    background: #bb0000;
+    color: white;
+  }
+
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
 
 
 
