--- a/CSS/OrderForm/orderform.css
+++ b/CSS/OrderForm/orderform.css
@@ -12,3 +12,19 @@
     padding-top: 350px; /* spacer before main title*/
     padding-bottom: 500px;/* spacer after main logo*/
     color: rgb(0, 0, 0);
+
+.required{
+        background: url(../Images/Colorful-herd-of-American-Quarter-horses-mares-ss220407.jpg) no-repeat 50% 50%;
+        background-attachment: fixed; /* doesnt move*/
+        /* these do the older browser*/
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size:cover;
+        background-size: cover;
+        width: 100%;
+        display: block;
+        height: auto;
+        padding-top: 350px; /* spacer before main title*/
+        padding-bottom: 500px;/* spacer after main logo*/
+        color: rgb(0, 0, 0);
+    
